--- a/playbooks/templates/ooo_inventory.j2
+++ b/playbooks/templates/ooo_inventory.j2
@@ -3,6 +3,21 @@
 {{ node }} ansible_ssh_host={{ hostvars[node]['ansible_ssh_host'] }} ansible_ssh_user={{ hostvars[node]['ansible_ssh_user'] }}
 {% endfor %}
 
+[obj]
+{% for node in groups['obj'] %}
+{{ node }} ansible_ssh_host={{ hostvars[node]['ansible_ssh_host'] }} ansible_ssh_user={{ hostvars[node]['ansible_ssh_user'] }}
+{% endfor %}
+
+[mons]
+{% for node in groups['cephmon'] %}
+{{ node }} ansible_ssh_host={{ hostvars[node]['ansible_ssh_host'] }} ansible_ssh_user={{ hostvars[node]['ansible_ssh_user'] }}
+{% endfor %}
+
+[osds]
+{% for node in groups['cephosd'] %}
+{{ node }} ansible_ssh_host={{ hostvars[node]['ansible_ssh_host'] }} ansible_ssh_user={{ hostvars[node]['ansible_ssh_user'] }}
+{% endfor %}
+
 [galera]
 {% for node in groups['galera'] %}
 {{ node }} ansible_ssh_host={{ hostvars[node]['ansible_ssh_host'] }} ansible_ssh_user={{ hostvars[node]['ansible_ssh_user'] }}
