Exclude object node ext if
Modify hosts template so it excludes compute node eth1 getting
picked up to hosts file as an external net interface. Gather facts
before generating hosts file for better detection of eth1.

--- a/playbooks/templates/hosts.j2
+++ b/playbooks/templates/hosts.j2
@@ -8,7 +8,7 @@
 
 {% endfor %}
 
-{% for item in ansible_play_hosts %}
+{% for item in ( groups['api'] | union(groups['net']) | union(groups['obj']) ) %}
 {% if 'ansible_eth1' in hostvars[item]
 and 'ipv4' in hostvars[item]['ansible_eth1']
 and hostvars[item]['ansible_eth1']['ipv4']['address'] is defined %}
