--- a/playbooks/templates/ooo_inventory.j2
+++ b/playbooks/templates/ooo_inventory.j2
@@ -13,6 +13,11 @@
 {{ node }} ansible_ssh_host={{ hostvars[node]['ansible_ssh_host'] }} ansible_ssh_user={{ hostvars[node]['ansible_ssh_user'] }}
 {% endfor %}
 
+[mgrs]
+{% for node in groups['cephmon'] %}
+{{ node }} ansible_ssh_host={{ hostvars[node]['ansible_ssh_host'] }} ansible_ssh_user={{ hostvars[node]['ansible_ssh_user'] }}
+{% endfor %}
+
 [osds]
 {% for node in groups['cephosd'] %}
 {{ node }} ansible_ssh_host={{ hostvars[node]['ansible_ssh_host'] }} ansible_ssh_user={{ hostvars[node]['ansible_ssh_user'] }}
