--- a/playbooks/templates/hosts.j2
+++ b/playbooks/templates/hosts.j2
@@ -4,7 +4,7 @@
 
 {% for item in ansible_play_hosts %}
 {% set alt_name = item | regex_replace('^(.*)$', '\\1.openstacklocal') %}
-{{ hostvars[item]['ansible_eth0']['ipv4']['address'] }} {{ item }} {{ alt_name }} {% if item == "puppet-node" %}puppet{% endif %}
+{{ hostvars[item]['ansible_eth0']['ipv4']['address'] }} {{ item }} {{ alt_name }} {% if item == "puppet-node" %}puppet{% endif %} {% if item == "api-node0" %}{{ api_node0_floating_ip_fqdn }}{% endif %}
 
 {% endfor %}
 
